--- a/Carrinho/carrinho.html
+++ b/Carrinho/carrinho.html
@@ -58,7 +58,7 @@
   <div id="cartao-form" style="display: none;" class="pagamento-form">
     <input type="text" id="nome-cartao" placeholder="Nome"/>
     <input type="date" id="data-nascimento" />
-    <input type="text" id="numero-cartao" placeholder="Número do cartão (16 dígitos)" maxlength="16" />
+    <input type="text" id="numero-cartao" placeholder="Número do cartão (Não dê espaço)" maxlength="16" />
     <select id="parcelas"></select>
     <button onclick="validarCartao()">Finalizar Compra</button>
     <button onclick="cancelarCartao()">Cancelar</button>
